--- a/_config.yml
+++ b/_config.yml
@@ -13,4 +13,4 @@ timezone: Europe/Moscow
 encoding: utf-8
 permalink: pretty
 future: true
-#exclude: ['.gitignore']
+exclude: ['LICENSE', 'CHANGELOG.md']
