--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,9 @@ image:
   large: /assets/et8h.png
   background: /assets/background.png
 
+yandex_metrika: 49377289
+google_analytics: UA-117276892-3
+
 markdown: kramdown
 timezone: Europe/Moscow
 encoding: utf-8
