--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,10 @@ url: ''
 
 image:
   logo: /assets/et8h.png
-  large: /assets/et8h.png
+  large: /assets/et8h-large.png
   background: /assets/background.png
+
+twitter: tophackr_com
 
 yandex_metrika: 56873668
 google_analytics: UA-117276892-3
