--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-title: Emoji calendar
-description: Emoji Calendar
+title: Emoji Calendar
+description: >
+  A calendar is a system of organizing days for social, religious, commercial or administrative purposes. This is done by giving names to periods of time, typically days, weeks, months and years. A date is the designation of a single, specific day within such a system. A calendar is also a physical record (often paper) of such a system. A calendar can also mean a list of planned events, such as a court calendar or a partly or fully chronological list of documents, such as a calendar of wills.
 baseurl: ''
 url: ''
 
